# OmniAgrobot

./: README.md
robot_4_config/: CMakeLists.txt  README.md  config.json  package.xml
robot_4_config/config/joints/: joints.yaml
robot_4_config/config/links/: links.yaml
robot_4_config/include/: quadruped_description.h
robot_4_config/launch/: bringup.launch  gazebo.launch  navigate.launch  slam.launch  spawn_robot.launch
robot_4_config/launch/include/: move_base.launch
robot_4_description/: CMakeLists.txt  package.xml
robot_4_description/launch/: display.launch  gazebo.launch
robot_4_description/meshes/: FL_calf_Link.STL  FL_foot_Link.STL  FL_hip_Link.STL  FL_thigh_Link.STL  FR_calf_Link.STL  FR_foot_Link.STL  FR_hip_Link.STL  FR_thigh_Link.STL  RL_calf_Link.STL  RL_foot_Link.STL  RL_hip_Link.STL  RL_thigh_Link.STL  RR_calf_Link.STL  RR_foot_Link.STL  RR_hip_Link.STL  RR_thigh_Link.STL  base_link.STL
robot_4_description/urdf/: robot_4_description.csv  robot_4_description.urdf
